[gd_scene load_steps=6 format=3 uid="uid://bul6tvti1f6m5"]

[ext_resource type="Script" uid="uid://71e3jeqbcps5" path="res://Assets/script/Level 3/river_background.gd" id="1_ugelq"]
[ext_resource type="Texture2D" uid="uid://basxqfigs76p5" path="res://Assets/Sprites/level3/New Piskel (1).png" id="2_krekv"]
[ext_resource type="Texture2D" uid="uid://badep46xharl7" path="res://Assets/Sprites/level3/New Piskel (2).png" id="3_q4jcg"]
[ext_resource type="Texture2D" uid="uid://ds2ddgxhomsif" path="res://Assets/Sprites/level3/New Piskel (4).png" id="4_n6pe7"]
[ext_resource type="Texture2D" uid="uid://dxgf5k4ksvo0u" path="res://Assets/Sprites/level3/New Piskel (7).png" id="5_a3ai3"]

[node name="RiverBackground" type="ParallaxBackground"]
script = ExtResource("1_ugelq")

[node name="WaterLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(240, 0)

[node name="Water" type="TextureRect" parent="WaterLayer"]
offset_right = 280.0
offset_bottom = 163.0
texture = ExtResource("2_krekv")
stretch_mode = 1

[node name="LightWaterLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(240, 0)

[node name="LightWater" type="TextureRect" parent="LightWaterLayer"]
offset_right = 280.0
offset_bottom = 160.0
texture = ExtResource("3_q4jcg")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="DarkWaterLayer" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(240, 0)

[node name="DarkWater" type="TextureRect" parent="DarkWaterLayer"]
offset_right = 280.0
offset_bottom = 163.0
texture = ExtResource("4_n6pe7")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="DarkWaterLayer2" type="ParallaxLayer" parent="."]
unique_name_in_owner = true
motion_mirroring = Vector2(240, 0)

[node name="DarkWater" type="TextureRect" parent="DarkWaterLayer2"]
offset_right = 280.0
offset_bottom = 163.0
texture = ExtResource("5_a3ai3")
stretch_mode = 1
metadata/_edit_use_anchors_ = true
